# llvm-mos-sdk

./: CMakeLists.txt
cmake/modules/: CompileForMOS.cmake
common/include/: CMakeLists.txt  stddef.h
win/: .gitignore  build.bat  clean.bat  compile-examples.bat  config.bat  init-clang-mos.bat  set-llvm-mos.bat
